--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -21,7 +21,7 @@ input, button, textarea, select { font: inherit }
 body { 
     text-align: center;
     font-family: sans-serif;
-    background-color: slategray;
+    background-color: rgb(255, 9, 181);
 }
 
 h1 {
