--- a/assets/css/style-5.css
+++ b/assets/css/style-5.css
@@ -1,7 +1,7 @@
 /*  ============= WEB BROWSER RESETS ============ */
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
-html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
+html { height: 100%; font: inherit; font-size: 100%; vertical-align: baseline;
 scroll-behavior: smooth; scroll-padding-top: 20px }
 body { max-width: 1920px; line-height: 1.5; margin-left: auto; margin-right: auto; 
 min-height: 100vh; text-rendering: optimizeSpeed }  
@@ -12,7 +12,7 @@ input, button, textarea, select { font: inherit }
 /* ================= ENDS ================ */
 
 /* Desktops */
-@media (min-width: 768px) { body { padding: 4% 20% } }
+@media (min-width: 768px) { body { padding: 4% 20%; } }
 
 /* Mobiles */
 @media (max-width: 767px) { body { padding: 12% 8% } }
@@ -21,12 +21,12 @@ input, button, textarea, select { font: inherit }
 /* Web page */
 body {
     background-color: #FFFFBD;
+    font-family: 'Merriweather', serif;
 }
 
 /* Main heading */
 h1 {
-    font-family: serif;    
-    font-size: 84px;
+    font-size: calc(48px + (84 - 48) * ((100vw - 320px) /(1600 - 320)));
     line-height: 1.1;
     font-weight: normal;
     color: #3434B0;
@@ -36,18 +36,16 @@ h1 {
 }
 
 /* Small headings */
-h2 {
-    font-family: serif;    
-    font-size: 26px;
+h2 { 
+    font-size: calc(18px + (26 - 18) * ((100vw - 320px) /(1600 - 320)));
     color:#3434B0;
     line-height: 1.5;
     margin-bottom: 42px;
 }
 
 /* Smaller headings */
-h3 {
-    font-family: serif;    
-    font-size: 42px;
+h3 {  
+    font-size: calc(32px + (38 - 32) * ((100vw - 320px) /(1600 - 320)));
     color: #000;
     letter-spacing:-1px;
     margin-top: 40px;
@@ -57,17 +55,37 @@ h3 {
 
 /* Text paragraphs */
 p {
-    font-family: serif;
-    font-size: 22px;
+    font-size: calc(16px + (21 - 16) * ((100vw - 320px) /(1600 - 320)));
     color: #455C80;
     line-height: 1.6;
     margin-top: 0;
     margin-bottom: 22px;
 }
 
-img {
+/* Images */
+img { 
     margin-bottom: 42px;
+    /* Drop shadow effect at right and bottom of image */
+    box-shadow: 8px 10px 8px #888;    
+}
 
-    box-shadow: 8px 10px 8px #888;
-;
+/* ====== HYPERLINK STYLES ====== */
+            
+         
+/* Passive link styles */
+            
+a:link, a:visited {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #000;
+    border-bottom: solid 2px #000;
+} 
+            
+/* Interactive link styles */
+            
+a:hover, a:focus, a:active {
+    text-decoration: none; 
+    padding-bottom: 2px;
+    color: #f26f21;
+    border-bottom: solid 2px blue;
 }
